# alpha_trading_framework

./: .dockerignore  .gitignore  README.md  config.py  docker-compose.yml  dockerfile  main.py  pyproject.toml
app/core/commands/: candels.py  securities.py
app/core/dispatcher/: dispatcher.py
app/core/exceptions/: securities.py
app/core/mappers/: securities.py
app/core/utils/: time_utils.py
app/db/: __init__.py  base.py  db.py  domain.py  sessions.py
app/domain/assets/: futures.py  securities.py
app/domain/constants/: assets.py  futures.py
app/infrastructure/services/: futures.py
app/infrastructure/services/market_data/: futures_history_downloader.py
app/interfaces/cli/: console.py
app/interfaces/notebook/: data_base.ipynb  historical_candles.ipynb  moex_data_wrangling.ipynb  securities.ipynb
app/models/: __init__.py  enum_helpers.py  historicalcandle.py  security.py
app/providers/: provider_connectors.py
app/providers/Alor/AlorPy/: AlorPy.py
app/providers/Alor/AlorPy_old_version/: AlorPy.py  AlorPy.rar  Config.py
app/providers/moex/: futures.py
app/sandbox/: control.py  controller.py  input_loop.py  state.py  storage.py
app/sandbox/modes/: base.py  calculator.py  command.py  dispatcher.py  file_mode.py  registry.py
app/sandbox/utility/: calculator.py  keyboard_test.py
app/schemas/: candel.py
