[project]
name = "application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "black>=26.1.0",
    "moexalgo>=2.5.9",
    "pandas>=2.3.3,<3.0.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]
